Actualiza documentación
Se corrige además la API de grupos_equipos pues faltaba enviarle un parámetro
